--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "axios": "^0.21.4",
     "core-js": "^3.15.1",
     "element-ui": "^2.15.2",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
