--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.15.1",
     "element-ui": "^2.15.2",
     "nuxt": "^2.15.7",
+    "ts-debounce": "^3.0.0",
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
