--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.21.4",
     "core-js": "^3.15.1",
+    "element-theme-dark": "^1.0.3",
     "element-ui": "^2.15.2",
     "nuxt": "^2.15.7",
     "ts-debounce": "^3.0.0",
