--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate",
     "deploy": "npm run build && npm run generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js"
+    "lint": "yarn lint:js",
+    "heroku-postbuild": "npm run deploy"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
